--- a/text/references.bib
+++ b/text/references.bib
@@ -578,3 +578,15 @@ R. and Lopez-Bigas, N. and Stein L.D. and the Mutation Consequences & Pathway An
   pmid = {22383865},
   doi = {10.1371/journal.pcbi.1002375}
 }
+
+@article{moonlight,
+  author = {Colaprico, A. and Olsen, C. and Bailey, M.H. and Odom, G.J. and Terkelsen, T. and Silva, T.C. and Olsen, A.V. and Cantini, L. and Zinovyev, A. and Barillot, E. and Noushmehr, H. and Bertoli, G. and Castiglioni, I. and Cava, C. and Bontempi, G. and Chen, X.S. and Papaleo, E.},
+  title = {Interpreting pathways to discover cancer driver genes with Moonlight},
+  journal = {Nature Communications},
+  year = {2020},
+  volume = {11},
+  number = {1},
+  pages = {69},
+  pmid = {31900418},
+  doi = {10.1038/s41467-019-13803-0}
+}
