--- a/code/supplements.Rmd
+++ b/code/supplements.Rmd
@@ -230,6 +230,149 @@ ggplot_umap_16
 
 ![**Supplementary Figure S4. Projection of pathway disruptions onto the UMAP.**_]
 
+```{r, supplemental-s5-data-generation, eval = FALSE}
+load("../data/gdc_tumor_coding_complete.Rdata")
+load("../data/gene_data.Rda")
+
+## Booleanize mutation count for each tumor sample
+missense <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$missense) 
+splice <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$splice)
+frameshdel <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$frameshdel)
+frameshins <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$frameshins)
+utr3 <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$utr3)
+utr5 <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$utr5)
+nonstop <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$nonstop)
+nonsense <- as.data.frame(SummarizedExperiment::assays(gdc_tumor_coding_complete)$nonsense)
+
+gdc_mut_count_patient <- missense + splice + frameshdel + frameshins + utr3 + utr5 + nonstop + nonsense ## add up all the mutation count
+rm(missense, splice, frameshdel, frameshins, utr3, utr5, nonstop, nonsense)
+gc()
+gdc_mut_count_patient[gdc_mut_count_patient > 0] <- 1 ## booleanize data, anything greater than 1 is equal to 1
+
+## class 7 and 8 distinguishing genes
+genes <- c("PIK3CA", "KRAS", "TP53")
+
+selected_mut <- gene_data %>% dplyr::select(external_gene_name, ensembl_gene_id) %>% filter(external_gene_name %in% genes) ## getting ensembl_id for the genes for filtering gdc data
+
+selected_mut <- gdc_mut_count_patient %>% filter(rownames(.) %in% selected_mut$ensembl_gene_id) %>% ## filter by ensembl ids
+  rownames_to_column(var = "ensembl_gene_id") %>% left_join(., selected_mut, by = "ensembl_gene_id") %>% ## replace ensembl ids with gene name 
+  column_to_rownames(var = "external_gene_name") %>% dplyr::select(-ensembl_gene_id) %>%
+  t() %>% as.data.frame() %>% rownames_to_column(var = "sample_id")  ## prep for left_join
+
+
+s5_data <- umap_cancertype %>% dplyr::select(sample_id, plot_x, plot_y) %>% ## select relevant columns
+  left_join(., selected_mut, by = "sample_id") %>%
+  melt(data = ., id.vars = c("sample_id", "plot_x", "plot_y")) %>%
+  filter(value != 0)
+
+save(s5_data, file = "../data/s5_data.Rda")
+```
+
+```{r supplemental-s5-plot}
+load("../data/s5_data.Rda")
+umap_cancertype <- fread("../data/umap_3d_coors.tsv") ## load data
+umap_bg <- umap_cancertype[,-"project_code"] ## get background data for facet
+
+clust_178 <- umap_cancertype %>% filter(clust_knn %in% c(1, 7, 8))
+
+
+umap_clust178 <- ggplot(clust_178, aes(x = plot_y, y = plot_x, colour = as.character(clust_knn))) + 
+  geom_point(data = umap_bg, aes(x = plot_y, y = plot_x), colour = "grey", size = 0.25) +
+  geom_point(size = 0.25) +
+  theme_classic() +
+  coord_fixed() +
+  xlab("UMAP 1") + ylab("UMAP 2") + labs(colour = "Cluster") +
+  guides(colour = guide_legend(override.aes = list(size=3))) +
+  scale_colour_manual(values = c("gold2", "gray51", "springgreen4")) +
+  theme(axis.text.x = element_blank(),
+    axis.text.y = element_blank(),
+    axis.title.x = element_text(size = 12),
+    axis.title.y = element_text(size = 12),
+    axis.ticks = element_blank(),
+    legend.position = c(0.95, 0.8))
+
+load("../data/s5_data.Rda")
+umap_cancertype <- fread("../data/umap_3d_coors.tsv") ## load data
+class7_8 <- umap_cancertype %>% filter(clust_knn %in% c(7, 8))
+umap_bg_7_8 <- class7_8[,-"project_code"] ## get background data for facet
+
+# pik3ca_kras <- ggplot(s5_data %>% filter(sample_id %in% umap_bg_7_8$sample_id) %>% filter(variable != "TP53") , aes(x = plot_y, y = plot_x, colour = as.character(value))) + 
+#   geom_point(data = umap_bg, aes(x = plot_y, y = plot_x), colour = "grey", size = 0.25) +
+#   geom_point(size = 0.25) +
+#   theme_classic() +
+#   coord_fixed() +
+#   #ylim(-0.50, 1.5) +
+#   xlab("UMAP 1") + ylab("UMAP 2") +
+#   scale_colour_manual(values = rep("firebrick3", 20)) +
+#   theme(axis.text.x = element_blank(),
+#     axis.text.y = element_blank(),
+#     axis.title.x = element_blank(),
+#     axis.title.y = element_blank(),
+#     axis.ticks = element_blank(),
+#     axis.line = element_blank(),
+#     legend.position = "none") +
+#   facet_wrap(~ variable, ncol = 2)
+
+tp53 <- ggplot(s5_data %>% filter(variable == "TP53") , aes(x = plot_y, y = plot_x, colour = as.character(value))) + 
+  geom_point(data = umap_bg, aes(x = plot_y, y = plot_x), colour = "grey", size = 0.25) +
+  geom_point(size = 0.25) +
+  theme_classic() +
+  coord_fixed() +
+  xlab("UMAP 1") + ylab("UMAP 2") +
+  scale_colour_manual(values = rep("firebrick3", 20)) +
+  theme(axis.text.x = element_blank(),
+    axis.text.y = element_blank(),
+    axis.title.x = element_blank(),
+    axis.title.y = element_blank(),
+    axis.ticks = element_blank(),
+    axis.line = element_blank(),
+    legend.position = "none") +
+  facet_wrap(~ variable, ncol = 1)
+
+pik3ca <- ggplot(s5_data %>%  filter(variable == "PIK3CA") , aes(x = plot_y, y = plot_x, colour = as.character(value))) + 
+  geom_point(data = umap_bg, aes(x = plot_y, y = plot_x), colour = "grey", size = 0.25) +
+  geom_point(size = 0.25) +
+  theme_classic() +
+  coord_fixed() +
+  #ylim(-0.50, 1.5) +
+  xlab("UMAP 1") + ylab("UMAP 2") +
+  scale_colour_manual(values = rep("firebrick3", 20)) +
+  theme(axis.text.x = element_blank(),
+    axis.text.y = element_blank(),
+    axis.title.x = element_blank(),
+    axis.title.y = element_blank(),
+    axis.ticks = element_blank(),
+    axis.line = element_blank(),
+    legend.position = "none") +
+  facet_wrap(~ variable, ncol = 1)
+
+kras <- ggplot(s5_data %>%  filter(variable == "KRAS") , aes(x = plot_y, y = plot_x, colour = as.character(value))) + 
+  geom_point(data = umap_bg, aes(x = plot_y, y = plot_x), colour = "grey", size = 0.25) +
+  geom_point(size = 0.25) +
+  theme_classic() +
+  coord_fixed() +
+  #ylim(-0.50, 1.5) +
+  xlab("UMAP 1") + ylab("UMAP 2") +
+  scale_colour_manual(values = rep("firebrick3", 20)) +
+  theme(axis.text.x = element_blank(),
+    axis.text.y = element_blank(),
+    axis.title.x = element_blank(),
+    axis.title.y = element_blank(),
+    axis.ticks = element_blank(),
+    axis.line = element_blank(),
+    legend.position = "none") +
+  facet_wrap(~ variable, ncol = 1)
+
+layout <- '
+AABB
+AACC
+AADD
+'
+
+umap_clust178 + pik3ca + kras + tp53 + plot_layout(design = layout)
+```
+
+
 ### Supplementary Table ST1
 
 <div style="text-align: right"> Supplementary Figure ST1 Data </div>
